--- a/user/public/index.html
+++ b/user/public/index.html
@@ -12,7 +12,7 @@
         <style>
           *{
             margin: 0;
-            font-family: 'Urbanist', sans-serif;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
           }
         </style>
       </head>
